Mejora de accesibilidad WCAG 2.2 Nivel AA
   Correcciones implementadas para cumplimiento completo de WCAG 2.2 AA:

   - Corregir atributo de idioma: lang='en' → lang='es' en 16 archivos HTML
     Cumple con WCAG 3.1.1 Nivel A (Language of Page)

   - Implementar elemento semántico <main> en 14 archivos HTML
     Cumple con WCAG 1.3.1 Nivel A (Info and Relationships)
     Mejora navegación por landmarks para lectores de pantalla

   - Corregir nivel de conformidad declarado: 'AAA' → 'AA' en 11 archivos
     Alinear badges, tagclouds y textos con nivel realmente alcanzado
     Actualizar enlaces W3C a documentación de Nivel AA

   Archivos modificados:
   - 5 páginas principales (index, transparencia, accesibilidad, alegal, etc)
   - 6 páginas de áreas (aintegral, empleo, forminno, igualdad, ocio, participación)
   - 2 páginas de test (hello, organizacion)

--- a/areas/aintegral.html
+++ b/areas/aintegral.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -378,6 +378,7 @@
             </div>
         </header>
         <!--Header end-->
+        <main>
         <!--Jumbotron-->
         <div class="jumbotron_ai" id="jumbotron">
             <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Atención Integral</h1>
@@ -817,6 +818,7 @@
             </div>
         </section>
         <!--Contact section end-->
+        </main>
 
 
         <!--Footer-->
@@ -904,10 +906,10 @@
                                 <div class="col-12 pop-link" style="text-align: center">
                                     <a href="cookies.html">Cookies y protección de datos</a>
                                     <a href="sistema-informacion.html">Sistema interno de información</a>
-                                    <a href="../test_pages/accesibilidad.html" class="accesibilidad-badge">
+                                    <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                                     </a>
                                 </div>
@@ -929,7 +931,7 @@
                             <div class="tagcloud">
                                 <ul class="tagcloudul">
                                     <li><a><span>One Page</span></a></li>
-                                    <li><a><span>WCAG 2.2 (Level AAA)</span></a></li>
+                                    <li><a><span>WCAG 2.2 (Level AA)</span></a></li>
                                     <li><a><span>HTML5</span></a></li>
                                     <li><a><span>Bootstrap 4</span></a></li>
                                     <li><a><span>Template</span></a></li>
