--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -440,6 +440,7 @@
             </div>
         </header>
         <!--Header end-->
+        <main>
         <!--Jumbotron-->
         <div class="jumbotron_index" id="jumbotron">
             <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Coordinadora de Personas con Discapacidad Física de Canarias</h1>
@@ -1254,6 +1255,7 @@
             </div>
         </section>
         <!--Contact section end-->
+        </main>
         <!--Footer-->
         <footer id="lab-footer" class="page-footer footer-bg">
             <!--Footer call-to-action-->
@@ -1404,7 +1406,7 @@
                             <div class="tagcloud">
                                 <ul class="tagcloudul">
                                     <li><a><span>One Page</span></a></li>
-                                    <li><a><span>WCAG 2.2 (Level AAA)</span></a></li>
+                                    <li><a><span>WCAG 2.2 (Level AA)</span></a></li>
                                     <li><a><span>HTML5</span></a></li>
                                     <li><a><span>Bootstrap 4</span></a></li>
                                     <li><a><span>Template</span></a></li>
@@ -1523,11 +1525,11 @@
                     <div class="row footer-dark">
                         <div class="col-12 copyright-text" style="text-align: center;">
                             <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
-                            <a href="test_pages/accesibilidad.html" class="accesibilidad-badge">
+                            <a href="areas/accesibilidad.html" class="accesibilidad-badge">
                                         <span class="wcag-badge">
                                             <strong>Grado de accesibilidad de nuestro portal web</strong>
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                             </a>
                             <div id="lab-back-top" style="display: none;">
