--- a/test_pages/organizacion.html
+++ b/test_pages/organizacion.html
@@ -202,6 +202,7 @@
         </div>
     </header>
     <!--Header end-->
+    <main>
 
     <!--Jumbotron-->
     <div id="jumbotron" class="jumbotron jumbotron-fluid mb-0" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 0;">
@@ -500,6 +501,7 @@
         </div>
     </section>
     <!--Referencia externa section end-->
+    </main>
 
     <!--Footer-->
     <footer id="lab-footer" class="lab-footer">
