--- a/transparencia.html
+++ b/transparencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -143,7 +143,7 @@
            2. Los iconos WHITE se muestran en hover y active
            3. El cambio es instantáneo y suave (0.3s transition)
            4. Los emojis originales se ocultan con font-size: 0
-           5. Accesibilidad AAA mantenida (21:1 en hover/active)
+           5. Accesibilidad AA mantenida (21:1 en hover/active)
 
            ============================================ */
 
@@ -716,6 +716,7 @@
         </div>
     </header>
     <!--Header end-->
+    <main>
     <!--Jumbotron-->
     <div class="jumbotron_transparencia" id="jumbotron">
         <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Portal de transparencia</h1>
@@ -1491,6 +1492,7 @@
         </div>
     </section>
     <!--Contact section end-->
+    </main>
 
     <!--Footer-->
     <footer id="lab-footer" class="page-footer footer-bg">
@@ -1580,7 +1582,7 @@
                                 <a href="test_pages/accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                                 </a>
                             </div>
