--- a/alegal.html
+++ b/alegal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -414,6 +414,7 @@
             </div>
         </header>
         <!--Header end-->
+        <main>
         <!--Jumbotron-->
         <div class="jumbotron_em" id="jumbotron">
             <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Aviso legal</h1>
@@ -633,6 +634,7 @@
             </div>
         </section>
         <!--Contact section end-->
+        </main>
 
 
         <!--Footer-->
@@ -727,7 +729,7 @@
                                     <a href="test_pages/accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                                     </a>
                                 </div>
