--- a/areas/forminno.html
+++ b/areas/forminno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -378,6 +378,7 @@
             </div>
         </header>
         <!--Header end-->
+        <main>
         <!--Jumbotron-->
         <div class="jumbotron_fi" id="jumbotron">
             <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Formación e innovación</h1>
@@ -801,6 +802,7 @@
             </div>
         </section>
         <!--Contact section end-->
+        </main>
 
 
         <!--Footer-->
@@ -888,10 +890,10 @@
                                 <div class="col-12 pop-link" style="text-align: center">
                                     <a href="cookies.html">Cookies y protección de datos</a>
                                     <a href="sistema-informacion.html">Sistema interno de información</a>
-                                    <a href="../test_pages/accesibilidad.html" class="accesibilidad-badge">
+                                    <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                                     </a>
                                 </div>
@@ -913,7 +915,7 @@
                             <div class="tagcloud">
                                 <ul class="tagcloudul">
                                     <li><a><span>One Page</span></a></li>
-                                    <li><a><span>WCAG 2.2 (Level AAA)</span></a></li>
+                                    <li><a><span>WCAG 2.2 (Level AA)</span></a></li>
                                     <li><a><span>HTML5</span></a></li>
                                     <li><a><span>Bootstrap 4</span></a></li>
                                     <li><a><span>Template</span></a></li>
