--- a/areas/igualdadpm.html
+++ b/areas/igualdadpm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -368,6 +368,7 @@
         </div>
     </header>
     <!--Header end-->
+    <main>
     <!--Jumbotron-->
     <div class="jumbotron_ipm" id="jumbotron">
         <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Igualdad y Promoción de la Mujer</h1>
@@ -620,6 +621,7 @@
         </div>
     </section>
     <!--Contact section end-->
+    </main>
 
 
     <!--Footer-->
@@ -707,10 +709,10 @@
                             <div class="col-12 pop-link" style="text-align: center">
                                 <a href="cookies.html">Cookies y protección de datos</a>
                                 <a href="sistema-informacion.html">Sistema interno de información</a>
-                                <a href="../test_pages/accesibilidad.html" class="accesibilidad-badge">
+                                <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aaa">Nivel AAA</span>
+                                            <span class="nivel-aa">Nivel AA</span>
                                         </span>
                                 </a>
                             </div>
