Traducir menú de accesibilidad al español

--- a/test_pages/aviso-legal.html
+++ b/test_pages/aviso-legal.html
@@ -186,7 +186,7 @@
             <div class="open-accessibility">
                 <ul class="lab-wcag-settings clearfix">
                     <!--Font type accessibility menu-->
-                    <li class="fontfamily-label">Font Family</li>
+                    <li class="fontfamily-label">Tipo de fuente</li>
                     <li>
                         <label class="fontfamily_opensans">
                             <input type="radio" name="font_setting" value="fontfamily_opensans" class="form-check-input" checked>
