--- a/test_pages/organizacion.html
+++ b/test_pages/organizacion.html
@@ -48,22 +48,22 @@
             <div class="open-accessibility">
                 <ul class="lab-wcag-settings clearfix">
                     <!--Font type accessibility menu-->
-                    <li class="fontfamily-label">Font Family</li>
-                    <li><a id="fontFamily-opensans" tabindex="0" aria-label="Open Sans Font Family">Open Sans</a></li>
-                    <li><a id="fontFamily-arial" tabindex="0" aria-label="Arial Font Family">Arial</a></li>
-                    <li><a id="fontFamily-default" class="active" tabindex="0" aria-label="Default Font Family">Default</a></li>
+                    <li class="fontfamily-label">Tipo de fuente</li>
+                    <li><a id="fontFamily-opensans" tabindex="0" aria-label="Open Sans Tipo de fuente">Open Sans</a></li>
+                    <li><a id="fontFamily-arial" tabindex="0" aria-label="Arial Tipo de fuente">Arial</a></li>
+                    <li><a id="fontFamily-default" class="active" tabindex="0" aria-label="Default Tipo de fuente">Default</a></li>
                     <!--Font type accessibility menu end-->
                     <!--Font size accessibility menu-->
-                    <li class="fontfamily-label">Font Size</li>
-                    <li><a id="fontSize-minus" tabindex="0" aria-label="Reduce Font Size">A-</a></li>
-                    <li><a id="fontSize-default" class="active" tabindex="0" aria-label="Default Font Size">A</a></li>
-                    <li><a id="fontSize-plus" tabindex="0" aria-label="Increase Font Size">A+</a></li>
+                    <li class="fontfamily-label">Tamaño de fuente</li>
+                    <li><a id="fontSize-minus" tabindex="0" aria-label="Reduce Tamaño de fuente">A-</a></li>
+                    <li><a id="fontSize-default" class="active" tabindex="0" aria-label="Tamaño de fuente por defecto">A</a></li>
+                    <li><a id="fontSize-plus" tabindex="0" aria-label="Increase Tamaño de fuente">A+</a></li>
                     <!--Font size accessibility menu end-->
-                    <!--Contrast accessibility menu-->
-                    <li class="fontfamily-label">Contrast</li>
-                    <li><a id="contrast-high" tabindex="0" aria-label="High Contrast">High</a></li>
-                    <li><a id="contrast-normal" class="active" tabindex="0" aria-label="Normal Contrast">Normal</a></li>
-                    <!--Contrast accessibility menu end-->
+                    <!--Contraste accessibility menu-->
+                    <li class="fontfamily-label">Contraste</li>
+                    <li><a id="contrast-high" tabindex="0" aria-label="High Contraste">High</a></li>
+                    <li><a id="contrast-normal" class="active" tabindex="0" aria-label="Normal Contraste">Normal</a></li>
+                    <!--Contraste accessibility menu end-->
                 </ul>
             </div>
         </div>
