Mover aviso legal a directorio areas y actualizar enlaces

--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -1313,6 +1313,7 @@
                             <div class="col-12 pop-link" style="text-align: center">
                                 <a href="cookies.html">Cookies y protección de datos</a>
                                 <a href="sistema-informacion.html">Sistema interno de información</a>
+                                <a href="alegal.html">Aviso legal</a>
                                 <a href="#home" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
