--- a/areas/alegal.html
+++ b/areas/alegal.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coordicanarias</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <!-- Stylesheets -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/my.css" rel="stylesheet" type="text/css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/my.css" rel="stylesheet" type="text/css">
 </head>
 
 <body id="home" class="sticky-bar menu-standard ">
@@ -221,7 +221,7 @@
                                     <a href="" class="" title="COORDICANARIAS" rel="home">
                                         <span class="">
                                             <picture>
-                                                <img src="images/brand-coordi-black.svg" width="250" alt="Logotipo de Coordicanarias" class="" />
+                                                <img src="../images/brand-coordi-black.svg" width="250" alt="Logotipo de Coordicanarias" class="" />
                                             </picture>
                                         </span>
                                     </a>
@@ -305,10 +305,10 @@
                     <div class="lab-container">
                         <div id="lab-bar-left">
                             <div id="lab-logo">
-                                <a href="index.html" class="" title="Logo de Coordicanarias" rel="home">
+                                <a href="../index.html" class="" title="Logo de Coordicanarias" rel="home">
                                     <span class="">
                                         <picture>
-                                            <img src="images/brand-coordi-black.svg" width="250" alt="Logo de Coordicanarias" class="" />
+                                            <img src="../images/brand-coordi-black.svg" width="250" alt="Logo de Coordicanarias" class="" />
                                         </picture>
                                     </span>
                                 </a>
@@ -645,7 +645,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3 foot-col-padd">
                             <div class="foot-logo">
-                                <img src="images/brand-coordi-black.svg" width="250" alt="Logotipo de Coordicanarias" class="float-center img-fluid">
+                                <img src="../images/brand-coordi-black.svg" width="250" alt="Logotipo de Coordicanarias" class="float-center img-fluid">
                             </div>
                             <div class="dream-text">
                                 <p>Coordinadora de Personas con Discapacidad Física de Canarias.
@@ -708,14 +708,14 @@
                             border-bottom: 1px solid #000; margin-bottom: 20px">Áreas</h3>
                             <div class="row">
                                 <div class="col-6 pop-link" style="text-align: center">
-                                    <a href="areas/aintegral.html">Atención Integral</a>
+                                    <a href="aintegral.html">Atención Integral</a>
                                     <a href="#home">Aviso legal</a>
-                                    <a href="areas/forminno.html">Formación e innovación</a>
+                                    <a href="forminno.html">Formación e innovación</a>
                                 </div>
                                 <div class="col-6 pop-link" style="text-align: center">
-                                    <a href="areas/ocio.html">Ocio</a>
-                                    <a href="areas/participaca.html">Participación</a>
-                                    <a href="areas/igualdadpm.html">Igualdad</a>
+                                    <a href="ocio.html">Ocio</a>
+                                    <a href="participaca.html">Participación</a>
+                                    <a href="igualdadpm.html">Igualdad</a>
                                 </div>
                             </div>
                         </div>
@@ -726,7 +726,8 @@
                                 <div class="col-12 pop-link" style="text-align: center">
                                     <a href="cookies.html">Cookies y protección de datos</a>
                                     <a href="sistema-informacion.html">Sistema interno de información</a>
-                                    <a href="test_pages/accesibilidad.html" class="accesibilidad-badge">
+                                    <a href="#home">Aviso legal</a>
+                                    <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
                                             <strong>WCAG 2.2</strong>
                                             <span class="nivel-aa">Nivel AA</span>
@@ -763,11 +764,11 @@
         </footer>
         <!--Footer end-->
     </div>
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/js-cookie.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/mixitup.min.js"></script>
+    <script src="../js/js-cookie.js"></script>
+    <script src="../js/main.js"></script>
 
 </body>
 
