--- a/index.html
+++ b/index.html
@@ -1388,8 +1388,13 @@
                                 <div class="col-12 pop-link" style="text-align: center">
                                     <a href="cookies.html">Cookies y protección de datos</a>
                                     <a href="sistema-informacion.html">Sistema interno de información</a>
-                                    <a href="test_pages/aviso-legal.html">Aviso legal</a>
-
+                                    <a href="areas/alegal.html">Aviso legal</a>
+                                    <a href="areas/accesibilidad.html" class="accesibilidad-badge">
+                                        <span class="">
+                                            <strong>WCAG 2.2</strong>
+                                            <span class="nivel-aa">Nivel AA</span>
+                                        </span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
