Actualizar footers y navegación

--- a/areas/empleo.html
+++ b/areas/empleo.html
@@ -228,7 +228,7 @@
                                 </div>
                                 <ul id="menu-side-menu" class="nav-menu">
                                     <li class="menu-item">
-                                        <a href="#home" data-scroll class="">Inicio</a>
+                                        <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#about-em">Empleo</a>
@@ -307,7 +307,7 @@
                                 <div class="lab-main-menu">
                                     <ul id="menu-main-menu" class="nav-menu">
                                         <li class="menu-item">
-                                            <a href="#home" data-scroll class="">Inicio</a>
+                                            <a href="../index.html" class="">Inicio</a>
                                         </li>
                                         <li class="menu-item">
                                             <a class="" data-scroll href="#about-em">Empleo</a>
@@ -887,8 +887,8 @@
                             border-bottom: 1px solid #000; margin-bottom: 20px">Información Legal</h3>
                             <div class="row">
                                 <div class="col-12 pop-link" style="text-align: center">
-                                    <a href="cookies.html">Cookies y protección de datos</a>
-                                    <a href="sistema-informacion.html">Sistema interno de información</a>
+                                    <a href="politica-cookies.html">Política de cookies</a>
+                                    <a href="politica-privacidad.html">Política de privacidad</a>
                                     <a href="alegal.html">Aviso legal</a>
                                     <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
@@ -998,7 +998,7 @@
                         <div class="lab-footer-menu">
                             <ul id="footer-menu" class="nav-menu footer-nav">
                                 <li class="menu-item">
-                                    <a href="#home" data-scroll class="">Inicio</a>
+                                    <a href="../index.html" class="">Inicio</a>
                                 </li>
                                 <li class="menu-item">
                                     <a class="" data-scroll href="#about-em">Empleo</a>
