--- a/index.html
+++ b/index.html
@@ -1386,8 +1386,8 @@
                             <h3 style="text-align: center">Información Legal</h3>
                             <div class="row">
                                 <div class="col-12 pop-link" style="text-align: center">
-                                    <a href="cookies.html">Cookies y protección de datos</a>
-                                    <a href="sistema-informacion.html">Sistema interno de información</a>
+                                    <a href="areas/politica-cookies.html">Política de cookies</a>
+                                    <a href="areas/politica-privacidad.html">Política de privacidad</a>
                                     <a href="areas/alegal.html">Aviso legal</a>
                                     <a href="areas/accesibilidad.html" class="accesibilidad-badge">
                                         <span class="">
