--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -587,7 +587,7 @@
                             </div>
                             <ul id="menu-side-menu" class="nav-menu">
                                 <li class="menu-item">
-                                    <a href="#home" data-scroll class="">Inicio</a>
+                                    <a href="../index.html" class="">Inicio</a>
                                 </li>
                                 <li class="menu-item">
                                     <a class="" data-scroll href="#compromiso">Compromiso</a>
@@ -657,7 +657,7 @@
                             <div class="lab-main-menu">
                                 <ul id="menu-main-menu" class="nav-menu">
                                     <li class="menu-item">
-                                        <a href="#home" data-scroll class="">Inicio</a>
+                                        <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#compromiso">Compromiso</a>
@@ -1301,7 +1301,7 @@
                             </div>
                             <div class="col-6 pop-link" style="text-align: center">
                                 <a href="ocio.html">Ocio</a>
-                                <a href="#home">Inicio</a>
+                                <a href="../index.html">Inicio</a>
                                 <a href="igualdadpm.html">Igualdad</a>
                             </div>
                         </div>
@@ -1311,14 +1311,14 @@
                             border-bottom: 1px solid #000; margin-bottom: 20px">Información Legal</h3>
                         <div class="row">
                             <div class="col-12 pop-link" style="text-align: center">
-                                <a href="cookies.html">Cookies y protección de datos</a>
-                                <a href="sistema-informacion.html">Sistema interno de información</a>
+                                <a href="politica-cookies.html">Política de cookies</a>
+                                <a href="politica-privacidad.html">Política de privacidad</a>
                                 <a href="alegal.html">Aviso legal</a>
-                                <a href="#home" class="accesibilidad-badge">
-                                        <span class="">
-                                            <strong>WCAG 2.2</strong>
-                                            <span class="nivel-AA">Nivel AA</span>
-                                        </span>
+                                <a href="accesibilidad.html" class="accesibilidad-badge">
+                                    <span class="">
+                                        <strong>WCAG 2.2</strong>
+                                        <span class="nivel-aa">Nivel AA</span>
+                                    </span>
                                 </a>
                             </div>
                         </div>
