Agregar enlace Áreas al menú principal

--- a/areas/alegal.html
+++ b/areas/alegal.html
@@ -384,6 +384,9 @@
                                         <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../index.html#features" class="">Áreas</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#objeto-al">Objeto</a>
                                     </li>
                                     <li class="menu-item">
