--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -590,6 +590,9 @@
                                     <a href="../index.html" class="">Inicio</a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="../index.html#features" class="">Áreas</a>
+                                </li>
+                                <li class="menu-item">
                                     <a class="" data-scroll href="#compromiso">Compromiso</a>
                                 </li>
                                 <li class="menu-item">
