--- a/areas/politica-cookies.html
+++ b/areas/politica-cookies.html
@@ -384,6 +384,9 @@
                                         <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../index.html#features" class="">Áreas</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#objeto-pc">¿Qué son las cookies?</a>
                                     </li>
                                     <li class="menu-item">
