Agregar enlace Transparencia a menús

--- a/areas/empleo.html
+++ b/areas/empleo.html
@@ -234,6 +234,9 @@
                                         <a href="../index.html#features" class="">Áreas</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../transparencia.html" class="">Transparencia</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#about-em">Empleo</a>
                                     </li>
                                     <li class="menu-item">
@@ -316,6 +319,9 @@
                                             <a href="../index.html#features" class="">Áreas</a>
                                         </li>
                                         <li class="menu-item">
+                                            <a href="../transparencia.html" class="">Transparencia</a>
+                                        </li>
+                                        <li class="menu-item">
                                             <a class="" data-scroll href="#about-em">Empleo</a>
                                         </li>
                                         <li class="menu-item">
@@ -356,6 +362,9 @@
                                             <ul id="menu-main-menu-1" class="nav-menu">
                                                 <li class="menu-item current-menu-item">
                                                     <a class="">Inicio</a>
+                                                </li>
+                                                <li class="menu-item">
+                                                    <a class="" href="../transparencia.html">Transparencia</a>
                                                 </li>
                                                 <li class="menu-item">
                                                     <a class="" href="#about-em">Empleo</a>
