--- a/areas/participaca.html
+++ b/areas/participaca.html
@@ -229,6 +229,9 @@
                                     <a href="../index.html#features" class="">Áreas</a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="../transparencia.html" class="">Transparencia</a>
+                                </li>
+                                <li class="menu-item">
                                     <a class="" data-scroll href="#about-pca">Participación</a>
                                 </li>
                                 <li class="menu-item">
@@ -306,6 +309,9 @@
                                         <a href="../index.html#features" class="">Áreas</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../transparencia.html" class="">Transparencia</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#about-pca">Participación</a>
                                     </li>
                                     <li class="menu-item">
@@ -346,6 +352,9 @@
                                         <ul id="menu-main-menu-1" class="nav-menu">
                                             <li class="menu-item current-menu-item">
                                                 <a class="">Inicio</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a class="" href="../transparencia.html">Transparencia</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a class="" href="#about-pca">Participación</a>
