--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                         <a class="" data-scroll href="#contact">Contacto</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a class="" data-scroll href="#transparencia">Transparencia</a>
+                                        <a class="" href="transparencia.html">Transparencia</a>
                                     </li>
 
                                 </ul>
@@ -377,7 +377,7 @@
                                             <a class="" data-scroll href="#contact">Contacto</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a class="" data-scroll href="#transparencia">Transparencia</a>
+                                            <a class="" href="transparencia.html">Transparencia</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -426,7 +426,7 @@
                                                     <a class="" href="#contact">Contacto</a>
                                                 </li>
                                                 <li class="menu-item">
-                                                    <a class="" href="#transparencia">Trasparencia</a>
+                                                    <a class="" href="transparencia.html">Transparencia</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1259,7 +1259,7 @@
         <!--Footer-->
         <footer id="lab-footer" class="page-footer footer-bg">
             <!--Footer call-to-action-->
-            <div class="main-container call-to-action">
+            <!-- <div class="main-container call-to-action">
                 <div id="transparencia" class="inside-container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -1277,7 +1277,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!--Footer call-to-action end-->
             <!--Footer contacts-->
             <div class="main-container footer-light contacts">
@@ -1378,7 +1378,7 @@
                                     <a class="" data-scroll href="#news">Novedades</a>
                                     <a class="" data-scroll href="#colabora">Colabora</a>
                                     <a class="" data-scroll href="#contact">Contacto</a>
-                                    <a class="" data-scroll href="#transparencia">Transparencia</a>
+                                    <a class="" href="transparencia.html">Transparencia</a>
                                 </div>
                             </div>
                         </div>
@@ -1515,7 +1515,7 @@
                                     <a class="" data-scroll href="#contact">Contacto</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a class="" data-scroll href="#transparencia">Transparencia</a>
+                                    <a class="" href="transparencia.html">Transparencia</a>
                                 </li>
                             </ul>
                         </div>
