--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -593,6 +593,9 @@
                                     <a href="../index.html#features" class="">Áreas</a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="../transparencia.html" class="">Transparencia</a>
+                                </li>
+                                <li class="menu-item">
                                     <a class="" data-scroll href="#compromiso">Compromiso</a>
                                 </li>
                                 <li class="menu-item">
@@ -700,6 +703,9 @@
                                         <ul id="menu-main-menu-1" class="nav-menu">
                                             <li class="menu-item current-menu-item">
                                                 <a class="">Inicio</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a class="" href="../transparencia.html">Transparencia</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a class="" data-scroll href="#compromiso">Compromiso</a>
