--- a/areas/alegal.html
+++ b/areas/alegal.html
@@ -387,6 +387,9 @@
                                         <a href="../index.html#features" class="">Áreas</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../transparencia.html" class="">Transparencia</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#objeto-al">Objeto</a>
                                     </li>
                                     <li class="menu-item">
@@ -463,6 +466,9 @@
                                             <a href="../index.html#features" class="">Áreas</a>
                                         </li>
                                         <li class="menu-item">
+                                            <a href="../transparencia.html" class="">Transparencia</a>
+                                        </li>
+                                        <li class="menu-item">
                                             <a class="" data-scroll href="#objeto-al">Objeto</a>
                                         </li>
                                         <li class="menu-item">
@@ -497,6 +503,9 @@
                                             <ul id="menu-main-menu-1" class="nav-menu">
                                                 <li class="menu-item current-menu-item">
                                                     <a class="">Inicio</a>
+                                                </li>
+                                                <li class="menu-item">
+                                                    <a class="" href="../transparencia.html">Transparencia</a>
                                                 </li>
                                                 <li class="menu-item">
                                                     <a class="" href="#objeto-al">Objeto</a>
