Mejorar UX móvil y agregar búsqueda global

--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#portfolios">Proyectos</a>
                                     </li>
-                                    <li class="menu-item">
+                                    <!-- <li class="menu-item">
                                         <a class="" data-scroll href="#news">Novedades</a>
                                     </li>
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#colabora">Colabora</a>
-                                    </li>
+                                    </li> -->
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#contact">Contacto</a>
                                     </li>
@@ -367,12 +367,12 @@
                                         <li class="menu-item">
                                             <a class="" data-scroll href="#portfolios">Proyectos</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <!-- <li class="menu-item">
                                             <a class="" data-scroll href="#news">Novedades</a>
                                         </li>
                                         <li class="menu-item">
                                             <a class="" data-scroll href="#colabora">Colabora</a>
-                                        </li>
+                                        </li> -->
                                         <li class="menu-item">
                                             <a class="" data-scroll href="#contact">Contacto</a>
                                         </li>
@@ -416,12 +416,12 @@
                                                 <li class="menu-item">
                                                     <a class="" href="#portfolios">Proyectos</a>
                                                 </li>
-                                                <li class="menu-item">
+                                                <!-- <li class="menu-item">
                                                     <a class="" href="#news">Novedades</a>
                                                 </li>
                                                 <li class="menu-item">
                                                     <a class="" data-scroll href="#colabora">Colabora</a>
-                                                </li>
+                                                </li> -->
                                                 <li class="menu-item">
                                                     <a class="" href="#contact">Contacto</a>
                                                 </li>
@@ -1016,7 +1016,7 @@
 
 
         <!--News section-->
-        <section id="news" class="section">
+        <!-- <section id="news" class="section">
             <div class="main-container section-bg">
                 <div class="inside-container">
                     <div class="row">
@@ -1073,11 +1073,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--News section end-->
 
         <!--Colabora section-->
-        <section id="colabora" class="section">
+        <!-- <section id="colabora" class="section">
             <div class="main-container">
                 <div class="inside-container">
                     <div class="row">
@@ -1088,12 +1088,12 @@
                                 <!--Como organización sin ánimo de lucro, dependemos en gran medida de la generosidad
                                 y el compromiso de personas como tú para continuar nuestra labor.
                                 Tu colaboración nos permite ampliar horizontes, romper barreras y crear un futuro más inclusivo y
-                                justo para las personas con discapacidad en Canarias.-->
+                                justo para las personas con discapacidad en Canarias.->
                             </p>
                         </div>
                     </div>
 
-                    <!-- Pricing table -->
+                    <!-- Pricing table ->
                     <ul class="pricing-table pricing-col-4">
                         <li>
                             <div class="pricing-container">
@@ -1109,7 +1109,7 @@
                                         <!--Cada euro donado es una inversión en esperanza y posibilidad.
                                         Tus donaciones nos ayudan a mantener y ampliar nuestros programas,
                                         servicios y proyectos que influyen directamente
-                                        en la vida de muchas personas y sus familias.-->
+                                        en la vida de muchas personas y sus familias.->
                                     </li>
                                 </ul>
                                 <div class="footer">
@@ -1139,7 +1139,7 @@
                                         nuestro alcance y eficacia.
                                         Juntos, podemos desarrollar proyectos
                                         que generen un impacto positivo
-                                        sustancial en nuestra comunidad.-->
+                                        sustancial en nuestra comunidad.->
                                     </li>
                                 </ul>
                                 <div class="footer">
@@ -1169,7 +1169,7 @@
                                         te unes a una comunidad comprometida con
                                         la inclusión y el cambio social. Tu aportación
                                         regular nos brinda una base sólida para
-                                        planificar y desarrollar iniciativas a largo plazo.-->
+                                        planificar y desarrollar iniciativas a largo plazo.->
                                     </li>
                                 </ul>
                                 <div class="footer">
@@ -1199,7 +1199,7 @@
                                         tienes la oportunidad de involucrarte
                                         directamente en nuestras actividades y
                                         proyectos, aportando un valor inestimable
-                                        a nuestra labor.-->
+                                        a nuestra labor.->
                                     </li>
                                 </ul>
                                 <div class="footer">
@@ -1214,7 +1214,7 @@
                     </ul>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--Colabora section end-->
 
 
@@ -1375,8 +1375,8 @@
                                     <a class="" data-scroll href="#portfolios">Proyectos</a>
                                 </div>
                                 <div class="col-6 pop-link" style="text-align: center">
-                                    <a class="" data-scroll href="#news">Novedades</a>
-                                    <a class="" data-scroll href="#colabora">Colabora</a>
+                                    <!-- <a class="" data-scroll href="#news">Novedades</a>
+                                    <a class="" data-scroll href="#colabora">Colabora</a> -->
                                     <a class="" data-scroll href="#contact">Contacto</a>
                                     <a class="" href="transparencia.html">Transparencia</a>
                                 </div>
