--- a/areas/alegal.html
+++ b/areas/alegal.html
@@ -356,6 +356,18 @@
                                     <path d="M 11.46875 5 C 7.917969 5 5 7.914062 5 11.46875 L 5 20.53125 C 5 24.082031 7.914062 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z"/>
                                 </svg>
                             </a>
+                            <!-- Icono de búsqueda -->
+                            <a href="#"
+                               id="search-icon-trigger"
+                               aria-label="Buscar en el sitio"
+                               tabindex="0"
+                               role="button"
+                               aria-expanded="false"
+                               aria-controls="search-modal">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                                    <path d="M 19 3 C 13.488281 3 9 7.488281 9 13 C 9 15.394531 9.839844 17.589844 11.25 19.3125 L 3.28125 27.28125 L 4.71875 28.71875 L 12.6875 20.75 C 14.410156 22.160156 16.605469 23 19 23 C 24.511719 23 29 18.511719 29 13 C 29 7.488281 24.511719 3 19 3 Z M 19 5 C 23.429688 5 27 8.570313 27 13 C 27 17.429688 23.429688 21 19 21 C 14.570313 21 11 17.429688 11 13 C 11 8.570313 14.570313 5 19 5 Z"/>
+                                </svg>
+                            </a>
                             <!--<a aria-label="Pinterest" tabindex="0">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                     <path d="M 16.09375 4 C 11.01675 4 6 7.3833281 6 12.861328 C 6 16.344328 7.9584844 18.324219 9.1464844 18.324219 C 9.6364844 18.324219 9.9199219 16.958266 9.9199219 16.572266 C 9.9199219 16.112266 8.7460938 15.131797 8.7460938 13.216797 C 8.7460938 9.2387969 11.774359 6.4199219 15.693359 6.4199219 C 19.063359 6.4199219 21.556641 8.3335625 21.556641 11.851562 C 21.556641 14.478563 20.501891 19.40625 17.087891 19.40625 C 15.855891 19.40625 14.802734 18.516234 14.802734 17.240234 C 14.802734 15.370234 16 13.558906 16 11.628906 C 16 8.3529063 11.462891 8.94725 11.462891 12.90625 C 11.462891 13.73725 11.5665 14.657063 11.9375 15.414062 C 11.2555 18.353063 10 23.037406 10 26.066406 C 10 27.001406 10.133656 27.921422 10.222656 28.857422 C 10.390656 29.045422 10.307453 29.025641 10.564453 28.931641 C 13.058453 25.517641 12.827078 24.544172 13.955078 20.076172 C 14.564078 21.234172 16.137766 21.857422 17.384766 21.857422 C 22.639766 21.857422 25 16.736141 25 12.119141 C 25 7.2061406 20.75475 4 16.09375 4 z" />
@@ -457,6 +469,9 @@
                                                     <a class="">Inicio</a>
                                                 </li>
                                                 <li class="menu-item">
+                                                    <a class="" href="../index.html#features">Áreas</a>
+                                                </li>
+                                                <li class="menu-item">
                                                     <a class="" href="../transparencia.html">Transparencia</a>
                                                 </li>
                                                 <li class="menu-item">
@@ -479,10 +494,29 @@
                 </div>
             </div>
         </header>
+
+        <!-- Modal de búsqueda -->
+        <div id="search-modal" class="search-modal" role="dialog" aria-modal="true" aria-labelledby="search-modal-title">
+            <div class="search-modal-overlay"></div>
+            <div class="search-modal-content">
+                <div class="search-modal-header">
+                    <h2 id="search-modal-title" class="sr-only">Buscar en Coordicanarias</h2>
+                    <button id="search-modal-close"
+                            class="search-modal-close"
+                            aria-label="Cerrar búsqueda">
+                    </button>
+                </div>
+                <div class="search-modal-body">
+                    <script async src="https://cse.google.com/cse.js?cx=406aa1d8b8d294efe"></script>
+                    <div class="gcse-search" data-enableAutoComplete="true"></div>
+                </div>
+            </div>
+        </div>
+
         <!--Header end-->
         <main>
         <!--Jumbotron-->
-        <div class="jumbotron_em" id="jumbotron">
+        <div class="jumbotron_alegal" id="jumbotron">
             <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Aviso legal</h1>
             <p class="lead" style="padding-bottom: 60px;">Información legal sobre el uso de nuestro sitio web</p>
             <!--<hr class="my-4">-->
