banner de accesibilidad actualizado

--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -658,7 +658,7 @@
     <!--Header end-->
     <main>
     <!--Jumbotron-->
-    <div class="jumbotron_transparencia" id="jumbotron">
+    <div class="jumbotron_accesibilidad" id="jumbotron">
         <h1 class="display-4" style="padding-left: 20px; padding-right: 20px">Accesibilidad en Coordicanarias</h1>
         <p class="lead" style="padding-bottom: 60px;">Información sobre las pautas WCAG 2.2 AA de accesibilidad implementadas en nuestra web</p>
     </div>
